test/front.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: test
spec:
  externalIPs:
  - 192.168.0.155
  selector:
    app: app
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: test
spec:
  selector:
    matchLabels:
      app: app
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        tier: frontend
        track: stable
    spec:
      containers:
      - name: nginx
        image: soloveiruslan1989/nginx
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
